Addenda: fix home page highlight feature: type, spacing. (see #760)

--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -78,11 +78,20 @@
 
 #home #update p {
     line-height: 150%;
+    margin-bottom: 7px;
+    margin-top: 0;
     text-align: center;
 }
 #home #update a {
+    color: #122113; /* very dark green */
     margin-left: 0.3rem;
     text-decoration: underline;
+    &:visited {
+        color: #400c3f; /* very dark purple */
+    }
+    &::after {
+        content: " ➔";
+    }
 }
 #home #update .badge {
     background-color: rgba(236, 243, 151, 0.9);
@@ -235,7 +244,7 @@ a {
     }
     #home #banner {
         #overlay {
-            top: 115px;
+            top: 117px;
             width: $smallscreen-portrait-width;
         }
         > img {
@@ -251,7 +260,7 @@ a {
 @media only screen and (min-width: 401px) and (max-width: 600px) {
     #home #banner {
         #overlay {
-            top: 172px;
+            top: 160px;
             width: $smallscreen-landscape-width;
         }
         > img {
@@ -259,7 +268,7 @@ a {
             width: $smallscreen-landscape-width;
         }
         + .three-col {
-            padding-top: 400px;
+            padding-top: 360px;
         }
     }
 }
@@ -299,6 +308,9 @@ a {
             }
         }
     }
+    #home #update p {
+        margin-bottom: 16px;
+    }
     #home #banner {
         margin: 0;
         position: relative;
@@ -327,7 +339,7 @@ a {
         background: none;
         float: none;
         height: inherit;
-        margin: 14px 0;
+        margin: 0 0 14px;
         padding: 0;
         width: auto;
         h3, h4, p {
