--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -130,6 +130,7 @@ $search-suggest-menu-top: 83px;
         }
         #search {
             margin-left: 0.5em;
+            margin-right: 0.5em;
         }
         > ul {
             display: none;  /* will use bottom navigation instead of top */
